Clean and organize test classes, add prenom to Passager